src/main/java/com/example/goodToKnow/errors/UserNotFoundException.java
package com.example.goodToKnow.errors;

public class UserNotFoundException extends RuntimeException {
  public UserNotFoundException() {
    super("User not found");
  }
}
